feat(DO): you even lift bro

--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
     textarea {
       width: 600px;
     }
+
+    table {
+      border-collapse: collapse;
+    }
+
+    th, td {
+      padding: 5px;
+      border: solid 1px;
+    }
   </style>
 </head>
 <body>
@@ -53,7 +62,7 @@
 
       var idx = Math.floor(Math.random() * 6);
 
-      idx = 0;
+      // idx = 0;
 
       console.log(`loading data-${ idx }.json`);
 
@@ -165,6 +174,14 @@
         return colors(membership.partition.id) || '#ccc';
       }
 
+      // TABLE
+      var table = d3
+          .select('body')
+          .append('table'),
+        thead = table.append('thead');
+
+      thead.append('tr');
+
       // UPDATE VISUALS
       function tick() {
 
@@ -245,6 +262,73 @@
             });
 
         legend.exit().remove();
+
+
+        // TABLE
+        var headerCells = thead
+          .selectAll('th')
+          .data(["Topic", "Partition"].concat(brokers.map(b => b.id)));
+
+        headerCells
+          .enter()
+          .append('th')
+          .text(d => d);
+
+        headerCells
+          .exit()
+          .remove();
+
+        var nestedData = d3
+          .nest()
+          .key(t => t.id)
+          .entries(topics);
+
+        var rowGroups = table
+          .selectAll('tbody')
+          .data(nestedData);
+
+        rowGroups
+          .enter()
+          .append('tbody')
+          .each(function(rowgroup) {
+            var topic = rowgroup.values[0];
+
+            var rowspan = topic.partitions.length;
+
+            d3.select(this)
+              .selectAll('tr')
+              .data(d => d.values[0].partitions)
+              .enter()
+              .append('tr')
+              .each(function (partition, index) {
+                var row = d3.select(this);
+
+                if (index == 0) {
+                  row.append('td').attr('rowspan', rowspan).text(topic.id);
+                }
+
+                row.append('td').text(partition.id);
+
+                brokers.forEach(broker => {
+                  var membership = broker.memberships.find(membership => {
+                    return membership.partition === partition;
+                  });
+
+                  if (membership) {
+                    row.append('td').text(' ').style('background', membershipColor(membership));
+                  } else {
+                    row.append('td').text(' ');
+                  }
+                });
+
+                // row.on('click', function(rowdata) {
+                //   console.log('Row Clicked');
+                //   console.log(rowdata);
+                // });
+              });
+          });
+
+          rowGroups.exit().remove();
       }
 
       function showPartitions(topics) {
@@ -430,11 +514,13 @@
 
           // TODO refresh links
           // REFRESH visual groups
-          simulation.nodes(brokers);
+          simulation.nodes(brokers).restart();
         });
 
       }
 
+      setInterval(reload, 3000);
+      
       reload();
     }
 
